<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rr_joystick</name>
  <version>0.0.0</version>
  <description>Joystick message node</description>
  <maintainer email="azzmosphere@gmail.com">Aaron Spiteri</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rr_common_base</depend>
  <depend>rr_common_plugins</depend>
  <depend>rr_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>gmock</depend>
  <depend>gtest</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
